--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -5,7 +5,7 @@
 			xmlns:layout= "sap.ui.layout"
 			xmlns:core="sap.ui.core"
 			xmlns:html="http://www.w3.org/1999/html"
-			height="100%"
+			height="88%"
 			displayBlock="true">
 
 	<!-- Header Shell Bar -->
@@ -29,9 +29,9 @@
 	<m:App id="app">
 	</m:App>
 
-			<!-- Footer Area -->
+	<!-- Footer Area -->
 	<m:OverflowToolbar id="otbFooter">
 		<m:ToolbarSpacer/>
-		<m:OverflowToolbarButton text="Feedback" icon="sap-icon://feedback" press="onFeedbackPress"/>
+		<m:Button text="Feedback" icon="sap-icon://feedback" press="onFeedbackPress"/>
 	</m:OverflowToolbar>
 </mvc:View>
